--- a/components/ArtPieces/ArtPieces.css
+++ b/components/ArtPieces/ArtPieces.css
@@ -1,4 +1,8 @@
 .art-pieces-list {
   display: flex;
   flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
