--- a/components/ArtPiecePreview/ArtPiecePreview.css
+++ b/components/ArtPiecePreview/ArtPiecePreview.css
@@ -3,24 +3,55 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 250px;
-  max-height: 350px;
+  gap: 15px;
+  max-width: 250px;
+  max-height: 300px;
   position: relative;
-  background-color: red;
+  margin: 50px 0;
 }
 
-.art-piece-preview__img {
-  width: 250px;
-  object-fit: contain;
+/* .art-piece-preview__container button {
   position: absolute;
+  top: 0px;
+  right: 30px;
+  visibility: none;
+  opacity: 0;
+}
+
+.art-piece-preview__container button:hover {
+  visibility: visible;
+  opacity: 0.5;
+} */
+
+.art-piece-preview__img {
+  width: 100%;
+  height: 100%;
+}
+
+.art-piece-preview__inner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  visibility: none;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.art-piece-preview__container:hover .art-piece-preview__inner-container {
+  visibility: visible;
+  opacity: 0.75;
 }
 
 .art-piece-preview__title {
-  z-index: -1;
-  position: absolute;
-  bottom: 50px;
 }
 
 .art-piece-preview__artist {
-  z-index: -1;
 }
