--- a/components/ArtPieces/ArtPieces.css
+++ b/components/ArtPieces/ArtPieces.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
+  justify-content: space-around;
+  align-items: space-around;
+  gap: 25px;
+  margin-top: 100px;
 }
