minimal style comments

--- a/components/CommentForm/CommentForm.css
+++ b/components/CommentForm/CommentForm.css
@@ -1,8 +1,10 @@
 .form-section {
-  background-color: hotpink;
 }
 
 .comment-form {
   display: flex;
   flex-direction: column;
+  margin: 48px auto;
+  justify-content: center;
+  align-items: center;
 }
