--- a/components/ArtPieceDetails/ArtPieceDetails.css
+++ b/components/ArtPieceDetails/ArtPieceDetails.css
@@ -1,4 +1,4 @@
-.art-piece-details {
+.art-piece-details__section {
   margin: 50px auto;
   display: flex;
   justify-content: center;
@@ -12,7 +12,7 @@
   justify-content: center;
 }
 
-.button-section {
+.button__section {
   display: flex;
   justify-content: center;
 }
