--- a/components/ArtPiecePreview/ArtPiecePreview.css
+++ b/components/ArtPiecePreview/ArtPiecePreview.css
@@ -1,31 +1,32 @@
 .art-piece-preview__container {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   gap: 15px;
   max-width: 250px;
-  max-height: 300px;
+  max-height: 400px;
   position: relative;
   margin: 50px 0;
 }
 
-/* .art-piece-preview__container button {
+.art-piece-preview__btn-container {
   position: absolute;
-  top: 0px;
+  top: -20px;
   right: 30px;
-  visibility: none;
-  opacity: 0;
+  background: #ffffff;
+  opacity: 0.7;
+  border-radius: 25px;
+  width: 20px;
+  height: 20px;
 }
 
 .art-piece-preview__container button:hover {
-  visibility: visible;
-  opacity: 0.5;
-} */
+}
 
 .art-piece-preview__img {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
 }
 
 .art-piece-preview__inner-container {
