--- a/components/ArtPiecePreview/ArtPiecePreview.css
+++ b/components/ArtPiecePreview/ArtPiecePreview.css
@@ -10,30 +10,27 @@
   margin: 50px 0;
 }
 
-.art-piece-preview__btn-container {
+.art-piece-preview__container button {
   position: absolute;
-  top: -20px;
-  right: 30px;
-  background: #ffffff;
-  opacity: 0.7;
-  border-radius: 25px;
-  width: 20px;
-  height: 20px;
-}
-
-.art-piece-preview__container button:hover {
+  top: -25px;
+  right: 0px;
+  width: 50px;
+  height: 50px;
+  z-index: 2;
+  box-shadow: ;
 }
 
 .art-piece-preview__img {
   width: 90%;
   height: 90%;
+  border-radius: 10px;
 }
 
 .art-piece-preview__inner-container {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 90%;
   height: 100%;
   background-color: #ffffff;
   display: flex;
@@ -44,6 +41,7 @@
   visibility: none;
   opacity: 0;
   transition: opacity 0.3s;
+  text-align: center;
 }
 
 .art-piece-preview__container:hover .art-piece-preview__inner-container {
@@ -51,8 +49,8 @@
   opacity: 0.75;
 }
 
-.art-piece-preview__title {
-}
-
+.art-piece-preview__title,
 .art-piece-preview__artist {
+  font-weight: bold;
+  color: black;
 }
