--- a/components/ArtPiecePreview/ArtPiecePreview.css
+++ b/components/ArtPiecePreview/ArtPiecePreview.css
@@ -17,13 +17,13 @@
   width: 50px;
   height: 50px;
   z-index: 2;
-  box-shadow: ;
 }
 
 .art-piece-preview__img {
   width: 90%;
   height: 90%;
   border-radius: 10px;
+  box-shadow: 10px 5px 5px grey;
 }
 
 .art-piece-preview__inner-container {
