--- a/components/Navigation/Navigation.css
+++ b/components/Navigation/Navigation.css
@@ -1,10 +1,20 @@
 nav {
   display: flex;
-  justify-content: space-around;
-  background: red;
+  justify-content: center;
+  gap: 20px;
 }
 
 button {
   padding: 1rem;
-  background-color: yellow;
+  background-color: lightsteelblue;
+  border-radius: 20px;
+  border: none;
+  font-weight: bold;
+  border-radius: 25px;
+  font-size: 1rem;
+  transition: linear 0.3s;
+}
+
+button:hover {
+  font-size: 1.1rem;
 }
