--- a/components/ArtPieceDetails/ArtPieceDetails.css
+++ b/components/ArtPieceDetails/ArtPieceDetails.css
@@ -12,6 +12,11 @@
   justify-content: center;
 }
 
+.details-page__img {
+  width: 20%;
+  height: 20%;
+}
+
 .button__section {
   display: flex;
   justify-content: center;
@@ -21,6 +26,18 @@ h3 {
   font-weight: bolder;
 }
 
-button {
-  text-align: center;
+.details-page__btn {
+  padding: 1rem;
+  background-color: transparent;
+  /* border-radius: 20px; */
+  border: none;
+  font-weight: bold;
+  font-size: 0.8rem;
+  transition: linear 0.3s;
+  border-bottom: 1px solid grey;
+}
+
+.details-page__btn:hover {
+  border-bottom: 1px solid lightsteelblue;
+  font-size: 0.83rem;
 }
