--- a/components/Navigation/Navigation.css
+++ b/components/Navigation/Navigation.css
@@ -2,19 +2,21 @@ nav {
   display: flex;
   justify-content: center;
   gap: 20px;
+  padding: 15px;
 }
 
-button {
+.nav__btn {
   padding: 1rem;
-  background-color: lightsteelblue;
-  border-radius: 20px;
+  background-color: transparent;
+  /* border-radius: 20px; */
   border: none;
   font-weight: bold;
-  border-radius: 25px;
-  font-size: 1rem;
+  font-size: 0.8rem;
   transition: linear 0.3s;
+  border-bottom: 1px solid grey;
 }
 
-button:hover {
-  font-size: 1.1rem;
+.nav__btn:hover {
+  border-bottom: 1px solid lightsteelblue;
+  font-size: 0.83rem;
 }
